--- a/FatedQuest.Libraries/StandardOperations/StandardOperations.vcxproj.filters
+++ b/FatedQuest.Libraries/StandardOperations/StandardOperations.vcxproj.filters
@@ -19,6 +19,12 @@
     <Filter Include="Source Files\FileHandling">
       <UniqueIdentifier>{5a648048-5cc7-4ecd-848e-1fb1751fc0a6}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\XMLDocument">
+      <UniqueIdentifier>{be678ae8-a925-46cf-98bf-568cee307bc7}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\XMLDocument">
+      <UniqueIdentifier>{90545528-aab6-422d-8dd3-cdb332e2711b}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -39,6 +45,27 @@
     <ClInclude Include="FileHandling\File.h">
       <Filter>Header Files\FileHandling</Filter>
     </ClInclude>
+    <ClInclude Include="XMLDocument\XMLDocument.h">
+      <Filter>Header Files\XMLDocument</Filter>
+    </ClInclude>
+    <ClInclude Include="XMLDocument\XMLNode.h">
+      <Filter>Header Files\XMLDocument</Filter>
+    </ClInclude>
+    <ClInclude Include="XMLDocument\XMLAttribute.h">
+      <Filter>Header Files\XMLDocument</Filter>
+    </ClInclude>
+    <ClInclude Include="XMLDocument\RapidXMLDocument.h">
+      <Filter>Header Files\XMLDocument</Filter>
+    </ClInclude>
+    <ClInclude Include="AllReferences.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="XMLDocument\RapidXML.h">
+      <Filter>Header Files\XMLDocument</Filter>
+    </ClInclude>
+    <ClInclude Include="XMLDocument\RapidXMLNode.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="StandardOperations.cpp">
@@ -52,6 +79,21 @@
     </ClCompile>
     <ClCompile Include="FileHandling\File.cpp">
       <Filter>Source Files\FileHandling</Filter>
+    </ClCompile>
+    <ClCompile Include="XMLDocument\XMLDocument.cpp">
+      <Filter>Source Files\XMLDocument</Filter>
+    </ClCompile>
+    <ClCompile Include="XMLDocument\XMLNode.cpp">
+      <Filter>Source Files\XMLDocument</Filter>
+    </ClCompile>
+    <ClCompile Include="XMLDocument\XMLAttribute.cpp">
+      <Filter>Source Files\XMLDocument</Filter>
+    </ClCompile>
+    <ClCompile Include="XMLDocument\RapidXMLDocument.cpp">
+      <Filter>Source Files\XMLDocument</Filter>
+    </ClCompile>
+    <ClCompile Include="XMLDocument\RapidXMLNode.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
