--- a/FatedQuest.Libraries/StandardOperationsTests/StandardOperationsTests.vcxproj.filters
+++ b/FatedQuest.Libraries/StandardOperationsTests/StandardOperationsTests.vcxproj.filters
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="test.cpp" />
     <ClCompile Include="pch.cpp" />
     <ClCompile Include="XMLDocument\RapidXMLDocumentTests.cpp">
       <Filter>XMLDocument</Filter>
@@ -14,5 +13,8 @@
     <Filter Include="XMLDocument">
       <UniqueIdentifier>{4e2e85c6-2c51-4675-842e-c21521f823d0}</UniqueIdentifier>
     </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
