--- a/FatedQuest.Libraries/StandardOperationsTests/StandardOperationsTests.vcxproj
+++ b/FatedQuest.Libraries/StandardOperationsTests/StandardOperationsTests.vcxproj
@@ -107,6 +107,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Text\StringAdvancedReplaceTests.cpp" />
     <ClCompile Include="XMLDocument\RapidXMLDocumentTests.cpp" />
   </ItemGroup>
   <ItemGroup>
