--- a/FatedQuest.Libraries/StandardOperationsTests/StandardOperationsTests.vcxproj
+++ b/FatedQuest.Libraries/StandardOperationsTests/StandardOperationsTests.vcxproj
@@ -120,14 +120,14 @@
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
-    <Import Project="..\..\Tools\EnumGenerator\EnumGenerator\packages\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.1.7\build\native\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.targets" Condition="Exists('..\..\Tools\EnumGenerator\EnumGenerator\packages\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.1.7\build\native\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.targets')" />
-    <Import Project="..\..\Tools\EnumGenerator\EnumGenerator\packages\rapidxml.1.13\build\native\rapidxml.targets" Condition="Exists('..\..\Tools\EnumGenerator\EnumGenerator\packages\rapidxml.1.13\build\native\rapidxml.targets')" />
+    <Import Project="..\..\Tools\SuperGenerator\SuperGenerator\packages\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.1.7\build\native\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.targets" Condition="Exists('..\..\Tools\SuperGenerator\SuperGenerator\packages\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.1.7\build\native\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.targets')" />
+    <Import Project="..\..\Tools\SuperGenerator\SuperGenerator\packages\rapidxml.1.13\build\native\rapidxml.targets" Condition="Exists('..\..\Tools\SuperGenerator\SuperGenerator\packages\rapidxml.1.13\build\native\rapidxml.targets')" />
   </ImportGroup>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\..\Tools\EnumGenerator\EnumGenerator\packages\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.1.7\build\native\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\Tools\EnumGenerator\EnumGenerator\packages\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.1.7\build\native\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.targets'))" />
-    <Error Condition="!Exists('..\..\Tools\EnumGenerator\EnumGenerator\packages\rapidxml.1.13\build\native\rapidxml.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\Tools\EnumGenerator\EnumGenerator\packages\rapidxml.1.13\build\native\rapidxml.targets'))" />
+    <Error Condition="!Exists('..\..\Tools\SuperGenerator\SuperGenerator\packages\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.1.7\build\native\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\Tools\SuperGenerator\SuperGenerator\packages\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.1.7\build\native\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.targets'))" />
+    <Error Condition="!Exists('..\..\Tools\SuperGenerator\SuperGenerator\packages\rapidxml.1.13\build\native\rapidxml.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\Tools\SuperGenerator\SuperGenerator\packages\rapidxml.1.13\build\native\rapidxml.targets'))" />
   </Target>
 </Project>
