--- a/Tools/SuperGenerator/SuperGenerator/SuperEnumGenerator/SuperEnumGenerator.vcxproj
+++ b/Tools/SuperGenerator/SuperGenerator/SuperEnumGenerator/SuperEnumGenerator.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{1ae9e9be-b55d-4c31-8a6f-7f3220e8d538}</ProjectGuid>
-    <RootNamespace>StandardOperations</RootNamespace>
+    <ProjectGuid>{7e141bab-0c83-497e-a3ad-49349e2ffd22}</ProjectGuid>
+    <RootNamespace>SuperEnumGenerator</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -141,43 +141,28 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="AllReferences.h" />
-    <ClInclude Include="FileHandling\CopyFileOptions.h" />
-    <ClInclude Include="FileHandling\CopyOptionsFileSystemHelper.h" />
-    <ClInclude Include="FileHandling\Directory.h" />
-    <ClInclude Include="FileHandling\File.h" />
+    <ClInclude Include="FatedQuestLibraries.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="GenerateEnum.h" />
     <ClInclude Include="pch.h" />
-    <ClInclude Include="Text\StringAdvancedReplace.h" />
-    <ClInclude Include="XMLDocument\RapidXML.h" />
-    <ClInclude Include="XMLDocument\RapidXMLAttribute.h" />
-    <ClInclude Include="XMLDocument\RapidXMLDocument.h" />
-    <ClInclude Include="XMLDocument\RapidXMLNode.h" />
-    <ClInclude Include="XMLDocument\XMLAttribute.h" />
-    <ClInclude Include="XMLDocument\XMLDocument.h" />
-    <ClInclude Include="XMLDocument\XMLNode.h" />
+    <ClInclude Include="SuperEnum.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="FileHandling\Directory.cpp" />
-    <ClCompile Include="FileHandling\File.cpp" />
+    <ClCompile Include="GenerateEnum.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="StandardOperations.cpp" />
-    <ClCompile Include="Text\StringAdvancedReplace.cpp" />
-    <ClCompile Include="XMLDocument\RapidXMLAttribute.cpp" />
-    <ClCompile Include="XMLDocument\RapidXMLDocument.cpp" />
-    <ClCompile Include="XMLDocument\RapidXMLNode.cpp" />
-    <ClCompile Include="XMLDocument\XMLAttribute.cpp" />
-    <ClCompile Include="XMLDocument\XMLDocument.cpp" />
-    <ClCompile Include="XMLDocument\XMLNode.cpp" />
+    <ClCompile Include="SuperEnum.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\StandardObjects\StandardObjects.vcxproj">
+    <ProjectReference Include="..\..\..\..\FatedQuest.Libraries\StandardObjects\StandardObjects.vcxproj">
       <Project>{3f3ccd80-0310-46b9-a963-285eac938cd6}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\FatedQuest.Libraries\StandardOperations\StandardOperations.vcxproj">
+      <Project>{1ae9e9be-b55d-4c31-8a6f-7f3220e8d538}</Project>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
@@ -185,12 +170,12 @@
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
-    <Import Project="..\..\Tools\SuperGenerator\SuperGenerator\packages\rapidxml.1.13\build\native\rapidxml.targets" Condition="Exists('..\..\Tools\SuperGenerator\SuperGenerator\packages\rapidxml.1.13\build\native\rapidxml.targets')" />
+    <Import Project="..\packages\rapidxml.1.13\build\native\rapidxml.targets" Condition="Exists('..\packages\rapidxml.1.13\build\native\rapidxml.targets')" />
   </ImportGroup>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\..\Tools\SuperGenerator\SuperGenerator\packages\rapidxml.1.13\build\native\rapidxml.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\Tools\SuperGenerator\SuperGenerator\packages\rapidxml.1.13\build\native\rapidxml.targets'))" />
+    <Error Condition="!Exists('..\packages\rapidxml.1.13\build\native\rapidxml.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\rapidxml.1.13\build\native\rapidxml.targets'))" />
   </Target>
 </Project>
