You can now generate enum values.
Also added a feature to search attributes. Did not need it in the end for this commit but will need it for the next.

--- a/FatedQuest.Libraries/StandardOperationsTests/StandardOperationsTests.vcxproj
+++ b/FatedQuest.Libraries/StandardOperationsTests/StandardOperationsTests.vcxproj
@@ -109,6 +109,7 @@
     </ClCompile>
     <ClCompile Include="Text\StringAdvancedReplaceTests.cpp" />
     <ClCompile Include="XMLDocument\RapidXMLDocumentTests.cpp" />
+    <ClCompile Include="XMLDocument\RapidXMLNodeTests.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
