--- a/SuperGameEngine/SuperGameEngine/packages.config
+++ b/SuperGameEngine/SuperGameEngine/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="rapidxml" version="1.13" targetFramework="native" />
   <package id="sdl2.nuget" version="2.30.9" targetFramework="native" />
   <package id="sdl2.nuget.redist" version="2.30.9" targetFramework="native" />
   <package id="sdl2_image.nuget" version="2.8.2" targetFramework="native" />
