Moved String and number helpers to operations

--- a/FatedQuest.Libraries/StandardOperations/StandardOperations.vcxproj
+++ b/FatedQuest.Libraries/StandardOperations/StandardOperations.vcxproj
@@ -147,7 +147,10 @@
     <ClInclude Include="FileHandling\Directory.h" />
     <ClInclude Include="FileHandling\File.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="Number\FloatingPointHelpers.h" />
+    <ClInclude Include="Number\IntHelpers.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="Text\StringHelpers.h" />
     <ClInclude Include="Text\StringAdvancedReplace.h" />
     <ClInclude Include="XMLDocument\RapidXML.h" />
     <ClInclude Include="XMLDocument\RapidXMLAttribute.h" />
@@ -168,6 +171,7 @@
     </ClCompile>
     <ClCompile Include="StandardOperations.cpp" />
     <ClCompile Include="Text\StringAdvancedReplace.cpp" />
+    <ClCompile Include="Text\StringHelpers.cpp" />
     <ClCompile Include="XMLDocument\RapidXMLAttribute.cpp" />
     <ClCompile Include="XMLDocument\RapidXMLDocument.cpp" />
     <ClCompile Include="XMLDocument\RapidXMLNode.cpp" />
