--- a/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj
+++ b/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj
@@ -132,6 +132,8 @@
     <ClCompile Include="EngineEntry\EngineEntry.cpp" />
     <ClCompile Include="Engine\Graphics\Texture\SDLRenderer.cpp" />
     <ClCompile Include="Engine\Graphics\Texture\SDLRendererReader.cpp" />
+    <ClCompile Include="Engine\Graphics\Texture\SuperTexture.cpp" />
+    <ClCompile Include="Engine\Graphics\Texture\SuperTextureWrapper.cpp" />
     <ClCompile Include="Engine\Graphics\Texture\Texture.cpp" />
     <ClCompile Include="Engine\MainEngine.cpp" />
     <ClCompile Include="main.cpp" />
@@ -144,6 +146,8 @@
     <ClInclude Include="Engine\Graphics\Texture\SDLRendererReader.h" />
     <ClInclude Include="Engine\Graphics\Texture\SDLRendererState.h" />
     <ClInclude Include="Engine\Graphics\Texture\SDLRenderer.h" />
+    <ClInclude Include="Engine\Graphics\Texture\SuperTexture.h" />
+    <ClInclude Include="Engine\Graphics\Texture\SuperTextureWrapper.h" />
     <ClInclude Include="Engine\Graphics\Texture\Texture.h" />
     <ClInclude Include="Engine\MainEngine.h" />
     <ClInclude Include="FatedQuestReferences.h" />
