--- a/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj
+++ b/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj
@@ -137,6 +137,8 @@
     <ClCompile Include="Engine\Graphics\Texture\Texture.cpp" />
     <ClCompile Include="Engine\MainEngine.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Structural\Spatial\Circle.cpp" />
+    <ClCompile Include="Structural\Spatial\Rectangle.cpp" />
     <ClCompile Include="Structural\Spatial\RectangleInt.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -152,6 +154,8 @@
     <ClInclude Include="Engine\Graphics\Texture\Texture.h" />
     <ClInclude Include="Engine\MainEngine.h" />
     <ClInclude Include="FatedQuestReferences.h" />
+    <ClInclude Include="Structural\Spatial\Circle.h" />
+    <ClInclude Include="Structural\Spatial\Rectangle.h" />
     <ClInclude Include="Structural\Spatial\RectangleInt.h" />
   </ItemGroup>
   <ItemGroup>
